force-app/main/default/objects/Account_Notification_Preference__c/Account_Notification_Preference__c.object-meta.xml
<CustomObject>
    <description>This object will hold the notification preference for accounts.</description>
    <label>Account Notification Preference</label>
    <nameField>
        <displayFormat>ANP-{0000000}</displayFormat>
        <label>Account Notification Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Notification Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>