force-app/main/default/objects/Account_Notification_Preference__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup field on Account</description>
    <label>Account Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Notification Preferences</relationshipLabel>
    <relationshipName>Account_Notification_Preferences</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>